revert GC parameters for surefire execution