@@ -110,6 +110,8 @@
     </developers>
 
     <properties>
+        <argLine.global>-XX:+UseConcMarkSweepGC</argLine.global>
+
         <emf.version>2.12.0</emf.version>
     </properties>
 
